add mobile icons

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -127,8 +127,8 @@
             </div>
             <div class="col-sm-6 col-xs-12">
               <div class="child white">
-                <h1>{% trans 'You can book from your IOS or Android mobile phone' %}</h1>
-                <h2>{% trans 'as easily as from PC or Mac' %}</h2>
+                <h1>{% trans 'Also available for mobile' %}</h1>
+                <a href="/"><img src="{% static 'img/mobile_icons.png' %}"></a>
               </div>
             </div>
           </div>
