remove static folder from .gitignore

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -128,7 +128,7 @@
             <div class="col-sm-6 col-xs-12">
               <div class="child white">
                 <h1>{% trans 'Also available for mobile' %}</h1>
-                <a href="/"><img src="{% static 'img/mobile_icons.png' %}"></a>
+                <a href="/"><img src="{% static 'img/ios_android.png' %}"></a>
               </div>
             </div>
           </div>
